# authunit

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py
api/models/: permission.py  service.py  user.py
api/private/: __init__.py
api/private/permissions/: __init__.py
api/private/service/: __init__.py
api/private/user/: __init__.py
api/public/: __init__.py
api/public/auth/: __init__.py
api/schemas/: permission.py  service.py  user.py
app/: main.py
app/core/: config.py  database.py  email_fixer.py  fastjwt.py  permission.py
