[tool.poetry]
name = "authunit"
version = "0.1.0"
description = ""
authors = ["Ihor Savenko <csigorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
beanie = "^1.21.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
pydantic = "^2.1.1"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
